--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
 </head>
 
 <body>
+    <!------------------------------
+        NAV
+    ------------------------------->
+    <nav>
+        <div class="container">
+            <a href="" class="logo">Gymso Fitness</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Shedules</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+
+            </ul>
+        </div>
+    </nav>
+
 
 </body>
 
