add and style HEADER

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </head>
 
 <body>
-    <!------------------------------
-        NAV
-    ------------------------------->
+   
+    <!-- NAV -->
     <nav>
         <div class="container">
             <a href="" class="logo">Gymso Fitness</a>
@@ -33,6 +32,20 @@
             </ul>
         </div>
     </nav>
+    <!-- END NAV -->
+
+    <!-- HEADER -->
+    <header>
+        <hgroup>
+            <h4>new way to build a healthy lifestyle!</h4>
+            <h1>UPGRADE YOUR BODY AT <br> GYMSO FITNESS</h1>
+            <div class="btn-area">
+                <button type="button">Get started</button>
+                <button type="button">Learn more</button>
+            </div>
+        </hgroup>
+    </header>
+    <!-- END HEADER -->
 
 
 </body>
