add and style ABOUT

--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
     </header>
     <!-- END HEADER -->
 
+    <!-- ABOUT -->
+    <section class="about">
+        <div class="container1">
+            <article>
+                <h3>New to the gymso?</h3>
+                <p>Your membership is up to 2 months FREE ($62.50 per <br> month)</p>
+                <p>Gymso is free HTML template by Tooplate for your commercial <br> website. Bootsrap v4.2.1 Layout. Feel free to use it.</p>
+                <button type="button">Become member today</button>
+            </article>
+            <article>
+                <h3>Working hours</h3>
+                <h4>Sunday: closed</h4>
+                <h4>Monday - Friday</h4>
+                <p>7:00 AM - 10:00 PM</p>
+                <h4>Saturday</h4>
+                <p>6:00 AM - 4:00 PM</p>
+            </article>
+        </div>
+    </section>
+    <!-- END ABOUT -->
+
 
 </body>
 
