Add and Style GYM section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
     </section>
     <!-- END ABOUT -->
 
+    <!-- SECTION GYM -->
+    <section class="gym">
+        <div class="container">
+            <article>
+                <h2>Hello, we are Gymso</h2>
+                <p>You are NOT allowed to redistribute this HTML template downloadable ZIP file on any template collection site. You are allowed to use this template for your personal or business websites.</p>
+                <p>If you have any question regarding Gymso Fitness HTML template, you can contact Tooplate immediately. Thank you.</p>
+            </article>
+
+            <article>
+                <div>
+                    <img src="assets/img/team-image.jpg" alt="">
+                    <h3>Mary Yan</h3>
+                    <p>Yoga instructor</p>
+                </div>
+                <div>
+                    <img src="assets/img/team-image01.jpg" alt="">
+                    <h3>Katherina</h3>
+                    <p>Yoga instructor</p>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- END GYM SECTION -->
+
 
 </body>
 
