Add and Style CLASSES section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,35 @@
     </section>
     <!-- END GYM SECTION -->
 
+    <!-- CLASSES SECTION -->
+    <section class="classes container">
+        <hgroup>
+            <span>Get a Perfect Body</span>
+            <h3>Our Training Classes</h3>
+        </hgroup>
+        <div class="row">
+            <article>
+                <img src="assets/img/yoga-class.jpg" alt="">
+                <h3>Yoga</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a ratione sapiente quibusdam libero harum?</p>
+                <button type="button">more info</button>
+            </article>
+            <article>
+                <img src="assets/img/cardio-class.jpg" alt="">
+                <h3>Cardio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a ratione sapiente quibusdam libero harum?</p>
+                <button type="button">more info</button>
+            </article>
+            <article>
+                <img src="assets/img/crossfit-class.jpg" alt="">
+                <h3>Cross fit</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a ratione sapiente quibusdam libero harum?</p>
+                <button type="button">more info</button>
+            </article>
+        </div>
+    </section>
+    <!-- END CLASS SECTION -->
+
 
 </body>
 
