Add and Style CONTACT section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,27 @@
     </section>
     <!-- END CLASS SECTION -->
 
+    <!-- CONTACT SECTION -->
+    <section class="contact">
+        <div class="container">
+            <article>
+                <h3>Feel free to ask anything</h3>
+                <form action="">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
+                    <textarea name="Message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button type="button">Send message</button>
+                </form>
+            </article>
+            <article>
+                <h3>Where you can find us</h3>
+                <p>120-240 Rio de Janeiro - State of Rio de Janeiro, Brazil</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4370.160902101883!2d-43.174764081308325!3d-22.918805630817726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f7dbcf85913%3A0x93a3879674067801!2zUmlvIGRlIEphbmVpcm8sIDEyMCAtIEdsw7NyaWEsIFJpbyBkZSBKYW5laXJvIC0gUkosIDIwMjQxLTE5MCwg0JHRgNCw0LfQuNC7!5e0!3m2!1ssr!2srs!4v1633632161904!5m2!1ssr!2srs" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </article>
+        </div>
+    </section>
+    <!-- END CONTACT SECTION -->
+
 
 </body>
 
