Add and Style FOOTER section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
     </section>
     <!-- END CONTACT SECTION -->
 
+    <!-- FOOTER SECTION -->
+    <footer>
+        <div class="container">
+            <article>
+                <p>Copyright &copy; Gymso Fitness Co.</p>
+                <p>Design: Svetozar Bozilovic</p>
+            </article>
+            <article>
+                    <a href=""><i class="fa fa-envelope-o"></i> hello@company.com</a>
+                    <a href=""></a><i class="fa fa-phone"></i> +381 365-6546</a>
+            </article>
+        </div>
+    </footer>
+    <!-- END FOOTER SECTION -->
+
 
 </body>
 
