Final code update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+ 
+
 
 <body>
    
@@ -21,10 +23,11 @@
         <div class="container">
             <a href="" class="logo">Gymso Fitness</a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Shedules</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#index.html">Home</a></li>
+                <li><a href="#about">Schedulle</a></li>
+                <li><a href="#gym">About us</a></li>
+                <li><a href="#classes">Classes</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -48,7 +51,7 @@
     <!-- END HEADER -->
 
     <!-- ABOUT -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container1">
             <article>
                 <h3>New to the gymso?</h3>
@@ -69,7 +72,7 @@
     <!-- END ABOUT -->
 
     <!-- SECTION GYM -->
-    <section class="gym">
+    <section class="gym" id="gym">
         <div class="container">
             <article>
                 <h2>Hello, we are Gymso</h2>
@@ -94,7 +97,7 @@
     <!-- END GYM SECTION -->
 
     <!-- CLASSES SECTION -->
-    <section class="classes container">
+    <section class="classes container" id="classes">
         <hgroup>
             <span>Get a Perfect Body</span>
             <h3>Our Training Classes</h3>
@@ -123,7 +126,7 @@
     <!-- END CLASS SECTION -->
 
     <!-- CONTACT SECTION -->
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <article>
                 <h3>Feel free to ask anything</h3>
@@ -147,12 +150,11 @@
     <footer>
         <div class="container">
             <article>
-                <p>Copyright &copy; Gymso Fitness Co.</p>
-                <p>Design: Svetozar Bozilovic</p>
+                <p>&copy;2021 Designed by Svetozar Božilović</p>
             </article>
             <article>
                     <a href=""><i class="fa fa-envelope-o"></i> hello@company.com</a>
-                    <a href=""></a><i class="fa fa-phone"></i> +381 365-6546</a>
+                    <a href=""><i class="fa fa-phone"></i> +381 365-6546</a>
             </article>
         </div>
     </footer>
